objects/ssot__AssetServiceLevelObjectiveConsequence__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Service Level Objective Cnsqnc Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceLevelSpecConsequence__c</fullName>
        <label>Service Level Spec Consequence</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721372137248_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceLevelObjectiveConsequenc_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetServiceLevelObjectiveConsequenc_rel</relationshipLabel>
        <relationshipName>rel_1721372137248_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>